--- a/mt-project/src/App.css
+++ b/mt-project/src/App.css
@@ -1,3 +1,4 @@
+@import url('../node_modules//antd/dist/antd.dark.css');
 .App {
   text-align: center;
 }
@@ -14,18 +15,12 @@
 }
 
 .App-header {
-  background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
 }
 
 @keyframes App-logo-spin {
